--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,32 @@
 version: 2
 jobs:
   build:
-      - image: node:6
+    docker:
+      - image: circleci/node:7.10
       - image: selenium/hub
       - image: selenium/node-firefox
       - image: selenium/node-chrome
-
+    working_directory: ~/repo
     steps:
       - checkout
 
+      # Download and cache dependencies
       - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "package.json" }}
-      - run:
-          command: npm install
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: npm install
+
       - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "package.json" }}
           paths:
-            - "node_modules"
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
           command: npm run start
           background: true
-
-      - run:
-          command: npm run test
+        
+      # run tests!
+      - run: npm run test
