fix webdriver hub images linking

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,11 @@ jobs:
     docker:
       - image: circleci/node:7.10
       - image: selenium/hub
+        name: hub
       - image: selenium/node-firefox
-      - image: selenium/node-chrome
+        environment:
+          HUB_PORT_4444_TCP_ADDR: hub
+          HUB_PORT_4444_TCP_PORT: 4444
     working_directory: ~/repo
     steps:
       - checkout
